@@ -1,11 +1,9 @@
 package com.dpw.runner.shipment.services.adapters.config;
 
-import com.dpw.runner.shipment.services.aspects.MultitenancyAspect.RequestAuthContext;
 import org.apache.http.impl.client.CloseableHttpClient;
 import org.apache.http.impl.client.HttpClientBuilder;
 import org.apache.http.impl.conn.PoolingHttpClientConnectionManager;
 import org.apache.http.message.BasicHeader;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpHeaders;
@@ -13,7 +11,7 @@ import org.springframework.http.MediaType;
 import org.springframework.http.client.HttpComponentsClientHttpRequestFactory;
 import org.springframework.web.client.RestTemplate;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 public class V1ServiceConfig {
@@ -23,19 +21,16 @@ public class V1ServiceConfig {
         PoolingHttpClientConnectionManager connectionManager = new PoolingHttpClientConnectionManager();
         connectionManager.setMaxTotal(100);
 
-        CloseableHttpClient httpClient = HttpClientBuilder.create()
+        return HttpClientBuilder.create()
                 .setConnectionManager(connectionManager)
-                .setDefaultHeaders(Arrays.asList(
+                .setDefaultHeaders(List.of(
                         new BasicHeader(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE)
                 ))
                 .build();
-
-        return httpClient;
     }
 
     @Bean
     public RestTemplate restTemplateForV1Service() {
-        RestTemplate restTemplate = new RestTemplate(new HttpComponentsClientHttpRequestFactory(httpClient()));
-        return restTemplate;
+        return new RestTemplate(new HttpComponentsClientHttpRequestFactory(httpClient()));
     }
 }
