@@ -11,20 +11,19 @@ import com.dpw.runner.shipment.services.commons.responses.RunnerResponse;
 import com.dpw.runner.shipment.services.dao.interfaces.IAwbDao;
 import com.dpw.runner.shipment.services.dao.interfaces.ICustomerBookingDao;
 import com.dpw.runner.shipment.services.dto.request.ListContractRequest;
-import com.dpw.runner.shipment.services.dto.request.npm.NPMFetchOffersRequest;
-import com.dpw.runner.shipment.services.dto.request.npm.NPMFetchOffersRequestFromUI;
-import com.dpw.runner.shipment.services.dto.request.npm.UpdateContractRequest;
+import com.dpw.runner.shipment.services.dto.request.ListContractsWithFilterRequest;
+import com.dpw.runner.shipment.services.dto.request.npm.*;
 import com.dpw.runner.shipment.services.dto.response.*;
 import com.dpw.runner.shipment.services.dto.response.npm.NPMContractsResponse;
 import com.dpw.runner.shipment.services.dto.response.npm.NPMContractsRunnerResponse;
 import com.dpw.runner.shipment.services.dto.response.npm.NPMFetchLangChargeCodeResponse;
 import com.dpw.runner.shipment.services.dto.response.npm.NpmAwbImportRateResponse;
 import com.dpw.runner.shipment.services.dto.v1.response.V1DataResponse;
-import com.dpw.runner.shipment.services.dto.request.npm.*;
 import com.dpw.runner.shipment.services.entity.Containers;
 import com.dpw.runner.shipment.services.entity.CustomerBooking;
 import com.dpw.runner.shipment.services.entity.Packing;
 import com.dpw.runner.shipment.services.entity.enums.IntegrationType;
+import com.dpw.runner.shipment.services.entitytransfer.dto.EntityTransferCarrier;
 import com.dpw.runner.shipment.services.exception.exceptions.NPMException;
 import com.dpw.runner.shipment.services.exception.exceptions.RunnerException;
 import com.dpw.runner.shipment.services.exception.response.NpmErrorResponse;
@@ -33,15 +32,19 @@ import com.dpw.runner.shipment.services.helpers.LoggerHelper;
 import com.dpw.runner.shipment.services.helpers.ResponseHelper;
 import com.dpw.runner.shipment.services.masterdata.request.CommonV1ListRequest;
 import com.dpw.runner.shipment.services.masterdata.response.UnlocationsResponse;
+import com.dpw.runner.shipment.services.service.interfaces.IQuoteContractsService;
+import com.dpw.runner.shipment.services.service.interfaces.IShipmentService;
 import com.dpw.runner.shipment.services.service.v1.IV1Service;
 import com.dpw.runner.shipment.services.utils.DateUtils;
+import com.dpw.runner.shipment.services.utils.MasterDataUtils;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.StringUtils;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.http.*;
+import org.springframework.http.RequestEntity;
+import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.HttpStatusCodeException;
 import org.springframework.web.client.RestTemplate;
@@ -55,8 +58,9 @@ import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.*;
 import java.util.concurrent.atomic.AtomicLong;
-import java.util.concurrent.atomic.AtomicReference;
 import java.util.stream.Collectors;
+
+import static com.dpw.runner.shipment.services.utils.CommonUtils.isStringNullOrEmpty;
 
 @Service
 @Slf4j
@@ -121,11 +125,20 @@ public class NPMServiceAdapter implements INPMServiceAdapter {
     private IAwbDao awbDao;
 
     @Autowired
+    private MasterDataUtils masterDataUtils;
+
+    @Autowired
     public NPMServiceAdapter(@Qualifier("restTemplateForNPM") RestTemplate restTemplate) {
         this.restTemplate = restTemplate;
     }
     @Autowired
     private ICustomerBookingDao customerBookingDao;
+
+    @Autowired
+    private IShipmentService shipmentService;
+
+    @Autowired
+    private IQuoteContractsService quoteContractsService;
 
     @Override
     public ResponseEntity<IRunnerResponse> fetchContract(CommonRequestModel commonRequestModel) throws RunnerException {
@@ -135,6 +148,8 @@ public class NPMServiceAdapter implements INPMServiceAdapter {
             log.info(PAYLOAD_SENT_FOR_EVENT_WITH_REQUEST_PAYLOAD_MSG, IntegrationType.NPM_CONTRACT_FETCH, jsonHelper.convertToJson(listContractRequest));
             ResponseEntity<ListContractResponse> response = restTemplate.exchange(RequestEntity.post(URI.create(url)).body(jsonHelper.convertToJson(listContractRequest)), ListContractResponse.class);
             this.setOriginAndDestinationName(response.getBody());
+            this.setCarrierMasterData(response.getBody());
+            quoteContractsService.updateQuoteContracts(response.getBody()); // update quote contracts data in db
             return ResponseHelper.buildDependentServiceResponse(response.getBody(),0,0);
         } catch (HttpStatusCodeException ex) {
             NpmErrorResponse npmErrorResponse = jsonHelper.readFromJson(ex.getResponseBodyAsString(), NpmErrorResponse.class);
@@ -154,7 +169,10 @@ public class NPMServiceAdapter implements INPMServiceAdapter {
             if(response.getBody() != null)
             {
                 mapContractToShipment(shipmentDetailsResponse, response.getBody());
+                var masterData = shipmentService.fetchAllMasterDataByKey(null, shipmentDetailsResponse);
+                shipmentDetailsResponse.setMasterDataMap(masterData);
             }
+            quoteContractsService.updateQuoteContracts(response.getBody()); // update quote contracts data in db
             return ResponseHelper.buildDependentServiceResponse(shipmentDetailsResponse,0,0);
         } catch (HttpStatusCodeException ex) {
             NpmErrorResponse npmErrorResponse = jsonHelper.readFromJson(ex.getResponseBodyAsString(), NpmErrorResponse.class);
@@ -166,28 +184,35 @@ public class NPMServiceAdapter implements INPMServiceAdapter {
     @Override
     public ResponseEntity<IRunnerResponse> fetchContracts(CommonRequestModel commonRequestModel) throws RunnerException {
         try {
-            ListContractRequest listContractRequest = (ListContractRequest) commonRequestModel.getData();
+            ListContractsWithFilterRequest listContractsWithFilterRequest = (ListContractsWithFilterRequest) commonRequestModel.getData();
+            ListContractRequest listContractRequest = listContractsWithFilterRequest.getListContractRequest();
             String url = npmBaseUrl + npmContracts;
             log.info(PAYLOAD_SENT_FOR_EVENT_WITH_REQUEST_PAYLOAD_MSG, IntegrationType.NPM_CONTRACT_FETCH, jsonHelper.convertToJson(listContractRequest));
             ResponseEntity<NPMContractsResponse> response = restTemplate.exchange(RequestEntity.post(URI.create(url)).body(jsonHelper.convertToJson(listContractRequest)), NPMContractsResponse.class);
-            List<NPMContractsRunnerResponse> listResponse = this.setOriginAndDestinationName(response.getBody());
+            NPMContractsResponse npmContractsResponse = response.getBody();
+            if(npmContractsResponse != null)
+            {
+                List<NPMContractsResponse.NPMContractResponse> list = npmContractsResponse.getContracts();
+                if(list != null && !list.isEmpty())
+                {
+                    list = list.stream().filter(c -> c.getValidTill() != null && LocalDateTime.now().isBefore(c.getValidTill())).toList();
+                    if(listContractsWithFilterRequest.getCargoType() != null)
+                    {
+                        list = list.stream().filter(c -> listContractsWithFilterRequest.getCargoType().equals(c.getProduct_type())).toList();
+                    }
+                    if(listContractsWithFilterRequest.getOrigin() != null)
+                    {
+                        list = list.stream().filter(c -> listContractsWithFilterRequest.getOrigin().equals(c.getOrigin())).toList();
+                    }
+                    if(listContractsWithFilterRequest.getDestination() != null)
+                    {
+                        list = list.stream().filter(c -> listContractsWithFilterRequest.getDestination().equals(c.getDestination())).toList();
+                    }
+                    npmContractsResponse.setContracts(list);
+                }
+            }
+            List<NPMContractsRunnerResponse> listResponse = this.setOriginAndDestinationName(npmContractsResponse);
             return ResponseHelper.buildDependentServiceResponse(listResponse,0,0);
-        } catch (HttpStatusCodeException ex) {
-            NpmErrorResponse npmErrorResponse = jsonHelper.readFromJson(ex.getResponseBodyAsString(), NpmErrorResponse.class);
-            log.error(NPM_FETCH_CONTRACT_FAILED_DUE_TO_MSG, jsonHelper.convertToJson(npmErrorResponse));
-            throw new NPMException(ERROR_FROM_NPM_WHILE_FETCHING_CONTRACTS_MSG + npmErrorResponse.getErrorMessage());
-        }
-    }
-
-    @Override
-    public ResponseEntity<IRunnerResponse> fetchContractsTemp(CommonRequestModel commonRequestModel) throws RunnerException {
-        try {
-            ListContractRequest listContractRequest = (ListContractRequest) commonRequestModel.getData();
-            String url = npmBaseUrl + npmContracts;
-            log.info(PAYLOAD_SENT_FOR_EVENT_WITH_REQUEST_PAYLOAD_MSG, IntegrationType.NPM_CONTRACT_FETCH, jsonHelper.convertToJson(listContractRequest));
-            ResponseEntity<ListContractResponse> response = restTemplate.exchange(RequestEntity.post(URI.create(url)).body(jsonHelper.convertToJson(listContractRequest)), ListContractResponse.class);
-            this.setOriginAndDestinationNameTemp(response.getBody());
-            return ResponseHelper.buildDependentServiceResponse(response.getBody(),0,0);
         } catch (HttpStatusCodeException ex) {
             NpmErrorResponse npmErrorResponse = jsonHelper.readFromJson(ex.getResponseBodyAsString(), NpmErrorResponse.class);
             log.error(NPM_FETCH_CONTRACT_FAILED_DUE_TO_MSG, jsonHelper.convertToJson(npmErrorResponse));
@@ -219,6 +244,7 @@ public class NPMServiceAdapter implements INPMServiceAdapter {
             log.info(PAYLOAD_SENT_FOR_EVENT_WITH_REQUEST_PAYLOAD_MSG, IntegrationType.NPM_OFFER_FETCH_V2, jsonHelper.convertToJson(request));
             ResponseEntity<FetchOffersResponse> response = restTemplate.exchange(RequestEntity.post(URI.create(url)).body(jsonHelper.convertToJson(request)), FetchOffersResponse.class);
             this.setMeasurementBasis(response.getBody());
+            this.modifyOffersAPIData(response.getBody());
             return ResponseHelper.buildDependentServiceResponse(response.getBody(),0,0);
         } catch (HttpStatusCodeException ex) {
             NpmErrorResponse npmErrorResponse = jsonHelper.readFromJson(ex.getResponseBodyAsString(), NpmErrorResponse.class);
@@ -253,7 +279,7 @@ public class NPMServiceAdapter implements INPMServiceAdapter {
             ResponseEntity<DependentServiceResponse> response = npmServiceRestTemplate.exchange(RequestEntity.post(URI.create(url)).body(req), DependentServiceResponse.class);
             return ResponseHelper.buildDependentServiceResponse(response.getBody().getData(), 0, 0);
         } catch (HttpStatusCodeException ex) {
-            RunnerResponse npmErrorResponse = jsonHelper.readFromJson(ex.getResponseBodyAsString(), RunnerResponse.class);
+            RunnerResponse<?> npmErrorResponse = jsonHelper.readFromJson(ex.getResponseBodyAsString(), RunnerResponse.class);
             log.error("NPM awb auto sell failed due to: {}", jsonHelper.convertToJson(npmErrorResponse.getError()));
             throw new NPMException("Error from NPM : " + npmErrorResponse.getError().getMessage());
         }
@@ -271,7 +297,7 @@ public class NPMServiceAdapter implements INPMServiceAdapter {
             awbDao.save(npmAwbImportRateResponse.updatedAwb);
             return ResponseHelper.buildDependentServiceResponse(response.getBody().getData(),0,0);
         } catch (HttpStatusCodeException ex) {
-            RunnerResponse npmErrorResponse = jsonHelper.readFromJson(ex.getResponseBodyAsString(), RunnerResponse.class);
+            RunnerResponse<?> npmErrorResponse = jsonHelper.readFromJson(ex.getResponseBodyAsString(), RunnerResponse.class);
             log.error("NPM awb import rates failed due to: {}", jsonHelper.convertToJson(npmErrorResponse.getError() ));
             throw new NPMException("Error from NPM : " + npmErrorResponse.getError().getMessage());
         }
@@ -298,7 +324,7 @@ public class NPMServiceAdapter implements INPMServiceAdapter {
                     "In",
                     Arrays.asList(locCodes)
             );
-            CommonV1ListRequest commonV1ListRequest = CommonV1ListRequest.builder().skip(0).take(0).criteriaRequests(criteria).build();
+            CommonV1ListRequest commonV1ListRequest = CommonV1ListRequest.builder().skip(0).criteriaRequests(criteria).build();
             V1DataResponse v1DataResponse = v1Service.fetchUnlocation(commonV1ListRequest);
             List<UnlocationsResponse> unlocationsResponse = jsonHelper.convertValueToList(v1DataResponse.entities, UnlocationsResponse.class);
             if (unlocationsResponse != null && !unlocationsResponse.isEmpty()) {
@@ -311,33 +337,32 @@ public class NPMServiceAdapter implements INPMServiceAdapter {
         }
     }
 
-    private void setOriginAndDestinationNameTemp(ListContractResponse response) {
-        Set<String> locCodes = new HashSet<>();
+    private void setCarrierMasterData(ListContractResponse response) {
+        Set<String> carrier = new HashSet<>();
+        log.info("List Contract Response to fetch carrier data {}", response);
         if(response != null && response.getContracts() != null  && !response.getContracts().isEmpty()) {
             response.getContracts().forEach(cont -> {
-                locCodes.add(cont.getOrigin());
-                locCodes.add(cont.getDestination());
-            });
-            List<Object> criteria = Arrays.asList(
-                    Arrays.asList(LOCATIONS_REFERENCE_GUID),
-                    "In",
-                    Arrays.asList(locCodes)
-            );
-            CommonV1ListRequest commonV1ListRequest = CommonV1ListRequest.builder().skip(0).take(0).criteriaRequests(criteria).build();
-            V1DataResponse v1DataResponse = v1Service.fetchUnlocation(commonV1ListRequest);
-            List<UnlocationsResponse> unlocationsResponse = jsonHelper.convertValueToList(v1DataResponse.entities, UnlocationsResponse.class);
-            if (unlocationsResponse != null && !unlocationsResponse.isEmpty()) {
-                Map<String, String> locationMap = new HashMap<>();
-                for (UnlocationsResponse unlocation : unlocationsResponse) {
-                    locationMap.put(unlocation.getLocationsReferenceGUID(), unlocation.getName());
+                if(cont.getCarrier_codes() != null) {
+                    cont.getCarrier_codes().remove(NPMConstants.ANY);
+                    cont.getCarrier_codes().remove(NPMConstants.SQSN);
+                    cont.getCarrier_codes().remove(null);
+                    if(!cont.getCarrier_codes().isEmpty()) {
+                        carrier.add(cont.getCarrier_codes().get(0));
+                        log.info("Carrier data from npm {}", carrier);
+                        response.setCarrierMasterData(masterDataUtils.fetchInBulkCarriersBySCACCode(carrier.stream().toList()));
+                        if(response.getCarrierMasterData().containsKey(cont.getCarrier_codes().get(0))) {
+                            EntityTransferCarrier carrierMasterData = response.getCarrierMasterData().get(cont.getCarrier_codes().get(0));
+                            cont.getCarrier_codes().set(0, carrierMasterData.getItemValue());
+                            response.getCarrierMasterData().clear();
+                            response.getCarrierMasterData().put(carrierMasterData.getItemValue(), carrierMasterData);
+                        }
+                        else {
+                            log.info("Carrier code not valid or not present in contract");
+                            cont.setCarrier_codes(new ArrayList<>());
+                        }
+                    }
                 }
-                response.getContracts().forEach(cont -> {
-                    if(locationMap.containsKey(cont.getOrigin()))
-                        cont.setOrigin_name(locationMap.get(cont.getOrigin()));
-                    if(locationMap.containsKey(cont.getDestination()))
-                        cont.setDestination_name(locationMap.get(cont.getDestination()));
-                });
-            }
+            });
         }
     }
 
@@ -350,39 +375,43 @@ public class NPMServiceAdapter implements INPMServiceAdapter {
                 locCodes.add(cont.getDestination());
             });
             List<Object> criteria = Arrays.asList(
-                    Arrays.asList(LOCATIONS_REFERENCE_GUID),
+                    List.of(LOCATIONS_REFERENCE_GUID),
                     "In",
-                    Arrays.asList(locCodes)
+                    List.of(locCodes)
             );
-            CommonV1ListRequest commonV1ListRequest = CommonV1ListRequest.builder().skip(0).take(0).criteriaRequests(criteria).build();
+            CommonV1ListRequest commonV1ListRequest = CommonV1ListRequest.builder().skip(0).criteriaRequests(criteria).build();
             V1DataResponse v1DataResponse = v1Service.fetchUnlocation(commonV1ListRequest);
             List<UnlocationsResponse> unlocationsResponse = jsonHelper.convertValueToList(v1DataResponse.entities, UnlocationsResponse.class);
             if (unlocationsResponse != null && !unlocationsResponse.isEmpty()) {
-                Map<String, String> locationMap = new HashMap<>();
-                for (UnlocationsResponse unlocation : unlocationsResponse) {
-                    locationMap.put(unlocation.getLocationsReferenceGUID(), unlocation.getName());
-                }
-                Map<String, List<NPMContractsResponse.NPMContractResponse>> responseMap = new HashMap<>();
-                response.getContracts().forEach(cont -> {
-                    if(locationMap.containsKey(cont.getOrigin()))
-                        cont.setOrigin_name(locationMap.get(cont.getOrigin()));
-                    if(locationMap.containsKey(cont.getDestination()))
-                        cont.setDestination_name(locationMap.get(cont.getDestination()));
-                    List<NPMContractsResponse.NPMContractResponse> list = new ArrayList<>();
-                    if(responseMap.get(cont.getParent_contract_id()) != null && responseMap.get(cont.getParent_contract_id()).size() > 0)
-                        list.addAll(responseMap.get(cont.getParent_contract_id()));
-                    list.add(cont);
-                    responseMap.put(cont.getParent_contract_id(), list);
-                });
-                for (var mapResponse: responseMap.entrySet()) {
-                    runnerResponseList.add(NPMContractsRunnerResponse.builder().
-                            parent_contract_id(mapResponse.getKey()).
-                            contracts(mapResponse.getValue()).
-                            build());
-                }
+                processUnLocationResponse(response, unlocationsResponse, runnerResponseList);
             }
         }
         return runnerResponseList;
+    }
+
+    private void processUnLocationResponse(NPMContractsResponse response, List<UnlocationsResponse> unlocationsResponse, List<NPMContractsRunnerResponse> runnerResponseList) {
+        Map<String, String> locationMap = new HashMap<>();
+        for (UnlocationsResponse unlocation : unlocationsResponse) {
+            locationMap.put(unlocation.getLocationsReferenceGUID(), unlocation.getName());
+        }
+        Map<String, List<NPMContractsResponse.NPMContractResponse>> responseMap = new HashMap<>();
+        response.getContracts().forEach(cont -> {
+            if(locationMap.containsKey(cont.getOrigin()))
+                cont.setOrigin_name(locationMap.get(cont.getOrigin()));
+            if(locationMap.containsKey(cont.getDestination()))
+                cont.setDestination_name(locationMap.get(cont.getDestination()));
+            List<NPMContractsResponse.NPMContractResponse> list = new ArrayList<>();
+            if(responseMap.get(cont.getParent_contract_id()) != null && !responseMap.get(cont.getParent_contract_id()).isEmpty())
+                list.addAll(responseMap.get(cont.getParent_contract_id()));
+            list.add(cont);
+            responseMap.put(cont.getParent_contract_id(), list);
+        });
+        for (var mapResponse: responseMap.entrySet()) {
+            runnerResponseList.add(NPMContractsRunnerResponse.builder().
+                    parent_contract_id(mapResponse.getKey()).
+                    contracts(mapResponse.getValue()).
+                    build());
+        }
     }
 
     private String mapMeasurementBasis(String uom)
@@ -393,15 +422,30 @@ public class NPMServiceAdapter implements INPMServiceAdapter {
         switch(uom)
         {
             case "perctr":
-                return "ContainerCount";
+                return NPMConstants.CONTAINER_COUNT;
             case "percbm":
                 return "Volume";
             case "perkg":
                 return "Weight";
             case "pership":
-                return "Shipment";
+                return NPMConstants.SHIPMENT_CAMEL_CASE;
             default:
                 return uom;
+        }
+    }
+
+    private void modifyOffersAPIData(FetchOffersResponse response) {
+        if(Objects.isNull(response) || Objects.isNull(response.getOffers()) || response.getOffers().isEmpty())
+            return;
+        FetchOffersResponse.Offer offer = response.getOffers().get(0);
+        if(!isStringNullOrEmpty(offer.getCarrier())) {
+            List<String> carrierCodes = new ArrayList<>();
+            carrierCodes.add(offer.getCarrier());
+            Map<String, EntityTransferCarrier> map = masterDataUtils.fetchInBulkCarriersBySCACCode(carrierCodes);
+            if(map.containsKey(offer.getCarrier()))
+                offer.setCarrier(map.get(offer.getCarrier()).ItemValue);
+            else
+                offer.setCarrier(null);
         }
     }
 
@@ -411,87 +455,101 @@ public class NPMServiceAdapter implements INPMServiceAdapter {
         {
             FetchOffersResponse.Offer offer = response.getOffers().get(0);
             if(offer.getEntity_rate_cards() != null && !offer.getEntity_rate_cards().isEmpty())
-            {
-                for (FetchOffersResponse.EntityRateCard entityRateCard: offer.getEntity_rate_cards()) {
-                    if(entityRateCard.getLoads_rates_info() != null && !entityRateCard.getLoads_rates_info().isEmpty())
-                    {
-                        for(FetchOffersResponse.LoadsRatesInfo loadsRatesInfo : entityRateCard.getLoads_rates_info())
-                        {
-                            if(loadsRatesInfo.getAssociated_rates() != null && !loadsRatesInfo.getAssociated_rates().isEmpty())
-                            {
-                                for(FetchOffersResponse.AssociatedRate associatedRate: loadsRatesInfo.getAssociated_rates())
-                                {
-                                    if(associatedRate != null)
-                                    {
-                                        associatedRate.setRates_uom(mapMeasurementBasis(associatedRate.getRates_uom()));
-                                        if(Objects.equals(associatedRate.getRates_uom(), "ContainerCount"))
-                                        {
-                                            if(loadsRatesInfo.getQuantity() != null)
-                                            {
-                                                associatedRate.setTotal_unit_count(BigDecimal.valueOf(loadsRatesInfo.getQuantity()));
-                                                associatedRate.setMeasurement_unit("Containers");
-                                            }
-                                        }
-                                        else if(Objects.equals(associatedRate.getRates_uom(), "Shipment"))
-                                        {
-                                            associatedRate.setTotal_unit_count(BigDecimal.ONE);
-                                            associatedRate.setMeasurement_unit("SHIPMENT");
-                                        }
-                                        else
-                                        {
-                                            associatedRate.setTotal_unit_count(associatedRate.getChargeable());
-                                            associatedRate.setMeasurement_unit(associatedRate.getChargeable_uom());
-                                        }
-                                    }
-                                }
-                            }
-                        }
-                    }
-                    if(entityRateCard.getAggregated_shipment_load_rates_info() != null && !entityRateCard.getAggregated_shipment_load_rates_info().isEmpty())
-                    {
-                        for(FetchOffersResponse.LoadsRatesInfo loadsRatesInfo : entityRateCard.getAggregated_shipment_load_rates_info())
-                        {
-                            if(loadsRatesInfo.getAssociated_rates() != null && !loadsRatesInfo.getAssociated_rates().isEmpty())
-                            {
-                                for(FetchOffersResponse.AssociatedRate associatedRate: loadsRatesInfo.getAssociated_rates())
-                                {
-                                    if(associatedRate != null) {
-                                        associatedRate.setRates_uom(mapMeasurementBasis(associatedRate.getRates_uom()));
-                                        if(Objects.equals(associatedRate.getRates_uom(), "ContainerCount"))
-                                        {
-                                            if(loadsRatesInfo.getQuantity() != null)
-                                            {
-                                                associatedRate.setTotal_unit_count(BigDecimal.valueOf(loadsRatesInfo.getQuantity()));
-                                                associatedRate.setMeasurement_unit("Containers");
-                                            }
-                                        }
-                                        else if(Objects.equals(associatedRate.getRates_uom(), "Shipment"))
-                                        {
-                                            associatedRate.setTotal_unit_count(BigDecimal.ONE);
-                                            associatedRate.setMeasurement_unit("SHIPMENT");
-                                        }
-                                        else
-                                        {
-                                            associatedRate.setTotal_unit_count(associatedRate.getChargeable());
-                                            associatedRate.setMeasurement_unit(associatedRate.getChargeable_uom());
-                                        }
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-            if(offer.getShipment_level_rates() != null && offer.getShipment_level_rates().size() > 0)
+                processEntityRateCards(offer);
+            if(offer.getShipment_level_rates() != null && !offer.getShipment_level_rates().isEmpty())
             {
                 for(FetchOffersResponse.AssociatedRate associatedRate : offer.getShipment_level_rates())
                 {
                     if(associatedRate != null) {
                         associatedRate.setRates_uom(mapMeasurementBasis(associatedRate.getRates_uom()));
                         associatedRate.setTotal_unit_count(BigDecimal.ONE);
-                        associatedRate.setMeasurement_unit("SHIPMENT");
+                        associatedRate.setMeasurement_unit(NPMConstants.SHIPMENT);
                     }
                 }
+            }
+        }
+    }
+
+    private void processEntityRateCards(FetchOffersResponse.Offer offer) {
+        for (FetchOffersResponse.EntityRateCard entityRateCard: offer.getEntity_rate_cards()) {
+            processLoadsRatesInfo(entityRateCard);
+            if(entityRateCard.getAggregated_shipment_load_rates_info() != null && !entityRateCard.getAggregated_shipment_load_rates_info().isEmpty())
+            {
+                for(FetchOffersResponse.LoadsRatesInfo loadsRatesInfo : entityRateCard.getAggregated_shipment_load_rates_info())
+                {
+                    if(loadsRatesInfo.getAssociated_rates() != null && !loadsRatesInfo.getAssociated_rates().isEmpty())
+                    {
+                        processFetchOffersAssociatedRate(loadsRatesInfo);
+                    }
+                }
+            }
+        }
+    }
+
+    private void processFetchOffersAssociatedRate(FetchOffersResponse.LoadsRatesInfo loadsRatesInfo) {
+        for(FetchOffersResponse.AssociatedRate associatedRate: loadsRatesInfo.getAssociated_rates())
+        {
+            if(associatedRate != null) {
+                associatedRate.setRates_uom(mapMeasurementBasis(associatedRate.getRates_uom()));
+                if(Objects.equals(associatedRate.getRates_uom(), NPMConstants.CONTAINER_COUNT))
+                {
+                    if(loadsRatesInfo.getQuantity() != null)
+                    {
+                        associatedRate.setTotal_unit_count(BigDecimal.valueOf(loadsRatesInfo.getQuantity()));
+                        associatedRate.setMeasurement_unit("Containers");
+                    }
+                }
+                else if(Objects.equals(associatedRate.getRates_uom(), NPMConstants.SHIPMENT_CAMEL_CASE))
+                {
+                    associatedRate.setTotal_unit_count(BigDecimal.ONE);
+                    associatedRate.setMeasurement_unit(NPMConstants.SHIPMENT);
+                }
+                else
+                {
+                    associatedRate.setTotal_unit_count(associatedRate.getChargeable());
+                    associatedRate.setMeasurement_unit(associatedRate.getChargeable_uom());
+                }
+            }
+        }
+    }
+
+    private void processLoadsRatesInfo(FetchOffersResponse.EntityRateCard entityRateCard) {
+        if(entityRateCard.getLoads_rates_info() != null && !entityRateCard.getLoads_rates_info().isEmpty())
+        {
+            for(FetchOffersResponse.LoadsRatesInfo loadsRatesInfo : entityRateCard.getLoads_rates_info())
+            {
+                if(loadsRatesInfo.getAssociated_rates() != null && !loadsRatesInfo.getAssociated_rates().isEmpty())
+                {
+                    for(FetchOffersResponse.AssociatedRate associatedRate: loadsRatesInfo.getAssociated_rates())
+                    {
+                        processLoadRatesAssociatedRate(loadsRatesInfo, associatedRate);
+                    }
+                }
+            }
+        }
+    }
+
+    private void processLoadRatesAssociatedRate(FetchOffersResponse.LoadsRatesInfo loadsRatesInfo, FetchOffersResponse.AssociatedRate associatedRate) {
+        if(associatedRate != null)
+        {
+            associatedRate.setRates_uom(mapMeasurementBasis(associatedRate.getRates_uom()));
+            if(Objects.equals(associatedRate.getRates_uom(), NPMConstants.CONTAINER_COUNT))
+            {
+                if(loadsRatesInfo.getQuantity() != null)
+                {
+                    associatedRate.setTotal_unit_count(BigDecimal.valueOf(loadsRatesInfo.getQuantity()));
+                    associatedRate.setMeasurement_unit("Containers");
+                }
+            }
+            else if(Objects.equals(associatedRate.getRates_uom(), NPMConstants.SHIPMENT_CAMEL_CASE))
+            {
+                associatedRate.setTotal_unit_count(BigDecimal.ONE);
+                associatedRate.setMeasurement_unit(NPMConstants.SHIPMENT);
+            }
+            else
+            {
+                associatedRate.setTotal_unit_count(associatedRate.getChargeable());
+                associatedRate.setMeasurement_unit(associatedRate.getChargeable_uom());
             }
         }
     }
@@ -501,10 +559,7 @@ public class NPMServiceAdapter implements INPMServiceAdapter {
         if(request.getBookingId() != null){
             customerBooking = customerBookingDao.findById(request.getBookingId());
         }
-        boolean isAlteration = false;
-        if (customerBooking!= null && customerBooking.isPresent() && !customerBooking.get().getBookingCharges().isEmpty()) {
-            isAlteration = true;
-        }
+        boolean isAlteration = customerBooking.isPresent() && !customerBooking.get().getBookingCharges().isEmpty();
 
         RequestAttributes requestAttributes = RequestContextHolder.getRequestAttributes();
         String xBrowserTimeZone = TimeZoneConstants.DEFAULT_TIME_ZONE_ID;
@@ -539,11 +594,11 @@ public class NPMServiceAdapter implements INPMServiceAdapter {
                 .preferred_date(preferredDateInUTC)
                 .preferred_date_type(request.getPreferredDateType())
                 .carrier(NPMConstants.ANY) //hardcoded
-                .loads_information(createLoadsInfo(request, customerBooking.isPresent() ? customerBooking.get() : null, isAlteration, NPMConstants.OFFERS_V2))
+                .loads_information(createLoadsInfo(request, customerBooking.orElse(null), isAlteration, NPMConstants.OFFERS_V2))
                 .mode_of_transport(request.getModeOfTransport())
-                .product_name(request.getCargoType()) // {TODO :: have to keep a mapping which is not present}
+                .product_name(request.getCargoType())
                 .contract_details(createContractDetails(request))
-                .shipment_type(request.getDirection() != null ? request.getDirection() : customerBooking.map(cb -> cb.getDirection()).orElse(null))
+                .shipment_type(request.getDirection() != null ? request.getDirection() : customerBooking.map(CustomerBooking::getDirection).orElse(null))
                 .service_mode(request.getServiceMode())
                 .fetch_default_rates(request.isFetchDefaultRates())
                 .slab_rates(false)
@@ -560,19 +615,15 @@ public class NPMServiceAdapter implements INPMServiceAdapter {
         if(request.getBookingId() != null){
             customerBooking = customerBookingDao.findById(request.getBookingId());
         }
-        boolean isAlteration = false;
-        if (customerBooking!= null && customerBooking.isPresent() && !customerBooking.get().getBookingCharges().isEmpty()) {
-            isAlteration = true;
-        }
 
         return NPMFetchOffersRequest.builder()
                 .origin(request.getOrigin())
                 .destination(request.getDestination())
                 .preferred_date(request.getPreferredDate())
                 .preferred_date_type(request.getPreferredDateType())
-                .loads_info(createLoadsInfo(request, customerBooking.isPresent() ? customerBooking.get() : null, false, NPMConstants.OFFERS_V8)) // TODO -; loads_info instead of loads_information
+                .loads_info(createLoadsInfo(request, customerBooking.orElse(null), false, NPMConstants.OFFERS_V8))
                 .mode_of_transport(request.getModeOfTransport())
-                .shipment_movement(customerBooking.map(cb -> cb.getDirection()).orElse(null))
+                .shipment_movement(customerBooking.map(CustomerBooking::getDirection).orElse(null))
                 .service_mode(request.getServiceMode())
                 .business_info(createBusinessInfo(request))
                 .contracts_info(createContractInfo(request))
@@ -605,15 +656,15 @@ public class NPMServiceAdapter implements INPMServiceAdapter {
     private List<NPMFetchOffersRequest.LoadInformation> createLoadsInfo(NPMFetchOffersRequestFromUI request, CustomerBooking customerBooking, boolean isAlteration, String offerType) {
         //First Time
         List<NPMFetchOffersRequest.LoadInformation> result = new ArrayList<>();
-        if (isAlteration == false) {
+        if (!isAlteration) {
             var containers = request.getContainers() != null ? request.getContainers() : new ArrayList<NPMFetchOffersRequestFromUI.Container>();
             var packs = request.getPacks() != null ? request.getPacks() : new ArrayList<NPMFetchOffersRequestFromUI.Pack>();
             result.addAll(containers.stream().filter(Objects::nonNull).map(
-                    c -> createLoadInfoFromContainers(request, c, offerType)).collect(Collectors.toList()));
+                    c -> createLoadInfoFromContainers(request, c, offerType)).toList());
             result.addAll(packs.stream().filter(Objects::nonNull).map(
-                    p -> createLoadInfoFromPacks(request, p, offerType)).collect(Collectors.toList()));
+                    p -> createLoadInfoFromPacks(request, p, offerType)).toList());
 
-            if((request.getPacks() == null || request.getPacks().size() == 0)
+            if((request.getPacks() == null || request.getPacks().isEmpty())
                     && (NPMConstants.AIR.equals(request.getModeOfTransport())  || NPMConstants.LCL.equals(request.getCargoType())))
             {
                  result.add(createLoadInfoForEmptyPacksList(request));
@@ -626,6 +677,31 @@ public class NPMServiceAdapter implements INPMServiceAdapter {
         Map<Long, Containers> existingContainers = customerBooking != null ? customerBooking.getContainersList().stream().filter(Objects::nonNull).collect(Collectors.toMap(Containers::getId, c -> c)) : new HashMap<>();
         Map<Long, Packing> existingPacks = customerBooking != null ? customerBooking.getPackingList().stream().filter(Objects::nonNull).collect(Collectors.toMap(Packing::getId, c -> c)) : new HashMap<>();
 
+        processNPMRequestContainers(request, offerType, result, existingContainers);
+        processNPMRequestPacks(request, offerType, result, existingPacks);
+
+        return result;
+    }
+
+    private void processNPMRequestPacks(NPMFetchOffersRequestFromUI request, String offerType, List<NPMFetchOffersRequest.LoadInformation> result, Map<Long, Packing> existingPacks) {
+        if(request.getPacks() != null) {
+
+            result.addAll(request.getPacks().stream().filter(Objects::nonNull).map(
+                    p -> {
+                        NPMFetchOffersRequest.LoadInformation model =
+                                createLoadInfoFromPacks(request, p, offerType);
+                        if (existingPacks.containsKey(p.getId())) {
+                            Packing packing = existingPacks.get(p.getId());
+                            model.getLoad_attributes().setQuantity(Long.valueOf(packing.getPacks()));
+                        }
+
+                        return model;
+                    }
+            ).toList());
+        }
+    }
+
+    private void processNPMRequestContainers(NPMFetchOffersRequestFromUI request, String offerType, List<NPMFetchOffersRequest.LoadInformation> result, Map<Long, Containers> existingContainers) {
         if(request.getContainers() != null) {
             result.addAll(request.getContainers().stream().filter(Objects::nonNull).map(
                     c -> {
@@ -640,25 +716,8 @@ public class NPMServiceAdapter implements INPMServiceAdapter {
                         }
 
                         return model;
-                    }).collect(Collectors.toList()));
+                    }).toList());
         }
-        if(request.getPacks() != null) {
-
-            result.addAll(request.getPacks().stream().filter(Objects::nonNull).map(
-                    p -> {
-                        NPMFetchOffersRequest.LoadInformation model =
-                                createLoadInfoFromPacks(request, p, offerType);
-                        if (existingPacks.containsKey(p.getId())) {
-                            Packing packing = existingPacks.get(p.getId());
-                            model.getLoad_attributes().setQuantity(Long.valueOf(packing.getPacks()));
-                        }
-
-                        return model;
-                    }
-            ).collect(Collectors.toList()));
-        }
-
-        return result;
     }
 
     private NPMFetchOffersRequest.LoadInformation createLoadInfoForEmptyPacksList(NPMFetchOffersRequestFromUI request) {
@@ -737,13 +796,13 @@ public class NPMServiceAdapter implements INPMServiceAdapter {
 
     private void mapContractToShipment(ShipmentDetailsResponse shipmentResponse, ListContractResponse contractResponse) {
         List<ListContractResponse.ContractResponse> contracts = contractResponse.getContracts();
-        if(contracts != null && contracts.size() > 0)
+        if(contractNotNull(contracts))
         {
             ListContractResponse.ContractResponse contract = contracts.get(0);
             shipmentResponse.setContractId(contract.getContract_id());
             shipmentResponse.setContractType(contract.getContract_type());
             shipmentResponse.setCarrierDetails(createCarrierDetails(contract));
-            shipmentResponse.setShipmentType(contract.getLoad_types().get(0));
+            shipmentResponse.setShipmentType(contract.getLoad_types() != null && !contract.getLoad_types().isEmpty() ? contract.getLoad_types().get(0) : null);
             if(contract.getMeta() != null)
             {
                 shipmentResponse.setTransportMode(contract.getMeta().getMode_of_transport());
@@ -770,98 +829,131 @@ public class NPMServiceAdapter implements INPMServiceAdapter {
         }
     }
 
+    private boolean contractNotNull(List<ListContractResponse.ContractResponse> contracts) {
+        return contracts != null && !contracts.isEmpty();
+    }
+
     private CarrierDetailResponse createCarrierDetails(ListContractResponse.ContractResponse contract) {
         return CarrierDetailResponse.builder()
                 .origin(contract.getOrigin())
                 .destination(contract.getDestination())
                 .originPort(contract.getMeta() != null ? contract.getMeta().getPol() : null)
                 .destinationPort(contract.getMeta() != null ? contract.getMeta().getPod() : null)
+                .shippingLine(getCarrier(contract))
+                .minTransitHours(contract.getMeta() != null ? contract.getMeta().getMinTransitHours() : null)
+                .maxTransitHours(contract.getMeta() != null ? contract.getMeta().getMaxTransitHours() : null)
                 .build();
+    }
+
+    public String getCarrier(ListContractResponse.ContractResponse contract) {
+        if(contract.getCarrier_codes() == null)
+            return null;
+        contract.getCarrier_codes().remove(NPMConstants.ANY);
+        contract.getCarrier_codes().remove(NPMConstants.SQSN);
+        contract.getCarrier_codes().remove(null);
+        if(contract.getCarrier_codes().isEmpty())
+            return null;
+        Map<String, EntityTransferCarrier> map = masterDataUtils.fetchInBulkCarriersBySCACCode(contract.getCarrier_codes().stream().toList());
+        if(map.containsKey(contract.getCarrier_codes().get(0)))
+            return map.get(contract.getCarrier_codes().get(0)).ItemValue;
+        return null;
     }
 
     private List<RoutingsResponse> createRoutings(ListContractResponse.ContractResponse contractResponse) {
         if(contractResponse.getMeta() != null && contractResponse.getMeta().getRoute() != null)
         {
             AtomicLong index = new AtomicLong(1L);
-            var routes = contractResponse.getMeta().getRoute().stream().filter(route -> route != null && route.getType() != null && route.getType().equals("LEG")).map(route -> RoutingsResponse.builder()
+            return contractResponse.getMeta().getRoute().stream().filter(route -> route != null && route.getType() != null && route.getType().equals("LEG")).map(route -> RoutingsResponse.builder()
                     .leg(index.getAndIncrement())
                     .pol(route.getOrigin() != null ? route.getOrigin().getCode() : null)
                     .pod(route.getDestination() != null ? route.getDestination().getCode() : null)
                     .mode(contractResponse.getMeta().getMode_of_transport())
                     .build()).toList();
-            return routes;
         }
         return null;
     }
 
     private List<PackingResponse> createPackings(ListContractResponse.ContractResponse contractResponse)
     {
-        if(contractResponse.getContract_usage() != null && contractResponse.getContract_usage().size() > 0)
+        if(contractResponse.getContract_usage() != null && !contractResponse.getContract_usage().isEmpty())
         {
             List<ListContractResponse.ContractUsage> contractUsages = contractResponse.getContract_usage();
             List<PackingResponse> packingList = new ArrayList<>();
             for(var contractUsage: contractUsages) {
-                var packing = new PackingResponse();
-                packing.setPacks(contractUsage.getUsage() != null ? contractUsage.getUsage().toString() : null);
-                var filter_attributes = contractUsage.getFilter_params();
-                if(filter_attributes != null)
-                {
-                    if(filter_attributes.getCargo_type() != null && filter_attributes.getCargo_type().size() > 0)
-                        packing.setPacksType(filter_attributes.getCargo_type().get(0));
-                    if(filter_attributes.getCommodity() != null && filter_attributes.getCommodity().size() > 0)
-                        packing.setCommodityGroup(filter_attributes.getCommodity().get(0));
-                }
-                var meta = contractUsage.getMeta();
-                if(meta != null)
-                {
-                     var load_attributes = meta.getLoad_attributes();
-                     packing.setWeight(load_attributes.getWeight());
-                     packing.setWeightUnit(load_attributes.getWeight_uom());
-                     packing.setVolume(load_attributes.getVolume());
-                     packing.setVolumeUnit(load_attributes.getVolume_uom());
-                     packing.setIsDimension(false);
-                     if(load_attributes.getDimensions() != null)
-                     {
-                         if(load_attributes.getDimensions().getLength() != null)
-                            packing.setLength(BigDecimal.valueOf(load_attributes.getDimensions().getLength()));
-                         if(load_attributes.getDimensions().getWidth() != null)
-                             packing.setWidth(BigDecimal.valueOf(load_attributes.getDimensions().getWidth()));
-                         if(load_attributes.getDimensions().getHeight() != null)
-                             packing.setHeight(BigDecimal.valueOf(load_attributes.getDimensions().getHeight()));
-                         packing.setLengthUnit(load_attributes.getDimensions().getUom());
-                         packing.setHeightUnit(load_attributes.getDimensions().getUom());
-                         packing.setWidthUnit(load_attributes.getDimensions().getUom());
-                         packing.setIsDimension(true);
-                     }
-                     packingList.add(packing);
-                }
+                var packing = getPackingResponse(contractUsage);
+                setPackingListMeta(contractUsage, packing, packingList);
             }
             return packingList;
         }
         return null;
     }
 
-    private List<ContainerResponse> createContainers(ListContractResponse.ContractResponse contractResponse)
+    private PackingResponse getPackingResponse(ListContractResponse.ContractUsage contractUsage) {
+        var packing = new PackingResponse();
+        var filterAttributes = contractUsage.getFilter_params();
+        if(filterAttributes != null)
+        {
+            if(filterAttributes.getCargo_type() != null && !filterAttributes.getCargo_type().isEmpty())
+                packing.setPacksType(filterAttributes.getCargo_type().get(0));
+            if(filterAttributes.getCommodity() != null && !filterAttributes.getCommodity().isEmpty())
+                packing.setCommodityGroup(filterAttributes.getCommodity().get(0));
+        }
+        return packing;
+    }
+
+    private void setPackingListMeta(ListContractResponse.ContractUsage contractUsage, PackingResponse packing, List<PackingResponse> packingList) {
+        var meta = contractUsage.getMeta();
+        if(meta != null)
+        {
+             var loadAttributes = meta.getLoad_attributes();
+             packing.setPacks(loadAttributes.getQuantity() != null ? loadAttributes.getQuantity().toString() : null);
+             packing.setWeight(loadAttributes.getWeight());
+             packing.setWeightUnit(loadAttributes.getWeight_uom());
+             packing.setVolume(loadAttributes.getVolume());
+             packing.setVolumeUnit(loadAttributes.getVolume_uom());
+             packing.setIsDimension(false);
+             if(loadAttributes.getDimensions() != null)
+             {
+                 if(loadAttributes.getDimensions().getLength() != null)
+                    packing.setLength(BigDecimal.valueOf(loadAttributes.getDimensions().getLength()));
+                 if(loadAttributes.getDimensions().getWidth() != null)
+                     packing.setWidth(BigDecimal.valueOf(loadAttributes.getDimensions().getWidth()));
+                 if(loadAttributes.getDimensions().getHeight() != null)
+                     packing.setHeight(BigDecimal.valueOf(loadAttributes.getDimensions().getHeight()));
+                 packing.setLengthUnit(loadAttributes.getDimensions().getUom());
+                 packing.setHeightUnit(loadAttributes.getDimensions().getUom());
+                 packing.setWidthUnit(loadAttributes.getDimensions().getUom());
+                 packing.setIsDimension(true);
+             }
+             packingList.add(packing);
+        }
+    }
+
+    private Set<ContainerResponse> createContainers(ListContractResponse.ContractResponse contractResponse)
     {
-        if(contractResponse.getContract_usage() != null && contractResponse.getContract_usage().size() > 0) {
+        if(contractResponse.getContract_usage() != null && !contractResponse.getContract_usage().isEmpty()) {
             List<ListContractResponse.ContractUsage> contractUsages = contractResponse.getContract_usage();
-            List<ContainerResponse> containerList = new ArrayList<>();
-            for(var contractUsage: contractUsages)
-            {
-                ContainerResponse containerResponse = new ContainerResponse();
-                containerResponse.setContainerCount(contractUsage.getUsage());
-                var filter_attributes = contractUsage.getFilter_params();
-                if(filter_attributes != null)
-                {
-                    if(filter_attributes.getCargo_type() != null && filter_attributes.getCargo_type().size() > 0)
-                        containerResponse.setContainerCode(filter_attributes.getCargo_type().get(0));
-                    if(filter_attributes.getCommodity() != null && filter_attributes.getCommodity().size() > 0)
-                        containerResponse.setCommodityGroup(filter_attributes.getCommodity().get(0));
-                }
-                containerList.add(containerResponse);
-            }
-            return containerList;
+            return getContainerList(contractUsages);
         }
         return null;
+    }
+
+    private Set<ContainerResponse> getContainerList(List<ListContractResponse.ContractUsage> contractUsages) {
+        Set<ContainerResponse> containerList = new HashSet<>();
+        for(var contractUsage: contractUsages)
+        {
+            ContainerResponse containerResponse = new ContainerResponse();
+            containerResponse.setContainerCount(Objects.isNull(contractUsage.getMeta()) ? contractUsage.getUsage() : contractUsage.getMeta().getOriginal_usage());
+            var filterAttributes = contractUsage.getFilter_params();
+            if(filterAttributes != null)
+            {
+                if(filterAttributes.getCargo_type() != null && !filterAttributes.getCargo_type().isEmpty())
+                    containerResponse.setContainerCode(filterAttributes.getCargo_type().get(0));
+                if(filterAttributes.getCommodity() != null && !filterAttributes.getCommodity().isEmpty())
+                    containerResponse.setCommodityGroup(filterAttributes.getCommodity().get(0));
+            }
+            containerList.add(containerResponse);
+        }
+        return containerList;
     }
 }
