@@ -15,13 +15,15 @@ import com.dpw.runner.shipment.services.helpers.ResponseHelper;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.api.parallel.Execution;
+import org.junit.jupiter.api.parallel.ExecutionMode;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.dao.DataRetrievalFailureException;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.concurrent.CompletableFuture;
@@ -32,6 +34,7 @@ import static org.mockito.Mockito.doThrow;
 import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
+@Execution(ExecutionMode.CONCURRENT)
 class DefaultViewsServiceTest {
 
     @Mock
@@ -73,7 +76,6 @@ class DefaultViewsServiceTest {
         CommonRequestModel commonRequestModel = CommonRequestModel.builder().build();
         commonRequestModel.setData(request);
         DefaultViews views = new DefaultViews(); // Provide necessary data for views
-        DefaultViewsResponse viewsResponse = new DefaultViewsResponse();
         when(defaultViewsDao.save(views)).thenThrow(new RuntimeException());
         when(jsonHelper.convertValue(any(DefaultViewsRequest.class), eq(DefaultViews.class))).thenReturn(views);
 
@@ -110,11 +112,9 @@ class DefaultViewsServiceTest {
         request.setId(null);
         CommonRequestModel commonRequestModel = CommonRequestModel.builder().build();
         commonRequestModel.setData(request);
-        DefaultViews views = new DefaultViews(); // Provide necessary data for views
-        DefaultViewsResponse viewsResponse = new DefaultViewsResponse();
         when(defaultViewsDao.findById(any())).thenReturn(Optional.empty());
 
-        var e = assertThrows(DataRetrievalFailureException.class, () -> defaultViewsService.update(commonRequestModel));
+        assertThrows(DataRetrievalFailureException.class, () -> defaultViewsService.update(commonRequestModel));
 
     }
 
@@ -125,12 +125,12 @@ class DefaultViewsServiceTest {
         CommonRequestModel commonRequestModel = CommonRequestModel.builder().build();
         commonRequestModel.setData(request);
         DefaultViews views = new DefaultViews(); // Provide necessary data for views
-        DefaultViewsResponse viewsResponse = new DefaultViewsResponse();
         when(defaultViewsDao.findById(any())).thenReturn(Optional.of(views));
         doThrow(new RuntimeException()).when(defaultViewsDao).save(any());
         when(jsonHelper.convertValue(any(DefaultViewsRequest.class), eq(DefaultViews.class))).thenReturn(views);
 
         ResponseEntity<IRunnerResponse> responseEntity = defaultViewsService.update(commonRequestModel);
+        assertEquals(HttpStatus.BAD_REQUEST, responseEntity.getStatusCode());
 
     }
 
@@ -216,7 +216,6 @@ class DefaultViewsServiceTest {
         CommonGetRequest request = CommonGetRequest.builder().id(10L).build(); // Provide necessary data for request
         CommonRequestModel commonRequestModel = CommonRequestModel.builder().build();
         commonRequestModel.setData(request);
-        DefaultViews views = new DefaultViews(); // Provide necessary data for views
         doThrow(new RuntimeException()).when(defaultViewsDao).findById(any());
 
         ResponseEntity<IRunnerResponse> responseEntity = defaultViewsService.delete(commonRequestModel);
@@ -258,7 +257,7 @@ class DefaultViewsServiceTest {
     void testRetrieveByIdWithIncludeColumns() {
 
         CommonGetRequest request = CommonGetRequest.builder().id(10L).build(); // Provide necessary data for request
-        request.setIncludeColumns(Arrays.asList("a"));
+        request.setIncludeColumns(List.of("a"));
         CommonRequestModel commonRequestModel = CommonRequestModel.builder().build();
         commonRequestModel.setData(request);
         DefaultViews views = new DefaultViews(); // Provide necessary data for views
